@@ -3,6 +3,9 @@ Summary of important user-visible changes for instrument-control 0.4.0+
  
   ** SERIAL: use extended win32 serial name for comports so > 10 work.
 
+     New serial functions:
+        serialbreak
+
      Added overload functions for: 
         fprintf
         fread
